# autograder

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.debug  Dockerfile.dev  README.md  autograder.py  config.dev  config.local.sh  config.sh  coverage.sh  file_structure  file_structure.dev  file_structure.local  labels.yaml  replace_end.txt  replace_lines.py  replace_start.txt  run_autograder  run_autograder.base  run_autograder.debug  run_autograder.dev  scores.yaml  sed_script.sh  setup.sh  zip_autograder.sh
assignment/: Cargo.toml
assignment/lib/: Cargo.toml
assignment/lib/src/: main.rs
assignment/src/: main.rs
assignment/tests/: unit.rs
autograder/: .gitignore  Cargo.toml  README.md
autograder/assignment/: Cargo.toml
autograder/assignment/src/: error.rs  lib.rs  main.rs  report.rs  test_result.rs  util.rs
autograder/assignment/tests/: unit.rs
autograder/src/: args.rs  cargo_test_output.rs  error.rs  labels.rs  main.rs  opt.rs  report.rs  run.rs  score_map.rs  test_result.rs  util.rs
autograder/submission/: Cargo.toml  coverage.sh
autograder/submission/src/: lib.rs
autograder/submission/tests/: unit.rs
autograder/test_lib/: Cargo.toml
autograder/test_lib/src/: lib.rs  main.rs  unused.rs
issue/: Cargo.toml
issue/src/: error.rs  main.rs
source/assignment/lib/src/: lib.rs
submission/: .gitignore  Cargo.toml
submission/src/: lib.rs  main.rs  solution.rs
submission/tests/: unit.rs
