[package]
name = "autograder"
version = "0.1.0"
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.11"
lcov = "0.5"
snafu = "0.6.2"
either = "1.5.3"
structopt = "0.3.11"
