[package]
name = "assignment"
version = "0.1.0"
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dev-dependencies]
#rand = "0.7.3"

[dependencies]
json = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
array-macro = "1.0.4"
submission = { path = "../submission" }
cargo-tarpaulin = { git = "https://github.com/ethanabrooks/tarpaulin.git", branch = "develop" }
