[package]
name = "assignment"
version = "0.1.0"
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
array-macro = "1.0.4"
submission = { path = "../submission" }
serde_yaml = "0.8.11"
rand = "0.7.3"
lcov = "0.5"
clap = "2.33.0"
